evidence/phase1-ingress-nginx-loadbalancer/raw/ingress-nginx-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: p2-ingress-nginx:/Service:ingress-nginx/ingress-nginx-controller
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"p2-ingress-nginx:/Service:ingress-nginx/ingress-nginx-controller","metallb.io/loadBalancerIPs":"192.168.0.241"},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx","app.kubernetes.io/version":"1.15.1","helm.sh/chart":"ingress-ng [...]
    metallb.io/ip-allocated-from-pool: p2-private-pool
    metallb.io/loadBalancerIPs: 192.168.0.241
  creationTimestamp: "2026-07-03T04:05:49Z"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.15.1
    helm.sh/chart: ingress-nginx-4.15.1
  name: ingress-nginx-controller
  namespace: ingress-nginx
  resourceVersion: "881291"
  uid: ddc0c686-cd2d-492f-8d15-afd40f6f8a51
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.204.106
  clusterIPs:
  - 10.43.204.106
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.241
      ipMode: VIP
